@@ -5,8 +5,11 @@ import static nl.uu.cs.aplib.AplibEDSL.*;
 import agent.iv4xr.AgentState;
 import agent.navigation.strategy.NavTactic;
 import agent.selector.EntitySelector;
+import agent.selector.ItemSelector;
 import agent.selector.TileSelector;
 import eu.iv4xr.framework.mainConcepts.WorldModel;
+
+import java.util.Arrays;
 import java.util.List;
 import nethack.enums.CommandEnum;
 import nethack.object.Command;
@@ -20,7 +23,7 @@ import nl.uu.cs.aplib.utils.Pair;
 public class GoalLib {
   public static GoalStructure explore() {
     Goal G =
-        goal("Main")
+        goal("Main agent explore goal")
             .toSolve(
                 (Pair<AgentState, WorldModel<Player, Entity>> proposal) -> {
                   return proposal.fst.app().gameState.done;
@@ -56,26 +59,20 @@ public class GoalLib {
                     NavTactic.navigateToTile(TileSelector.water),
                     */
 
-                    //                    Actions.quaffItem()
-                    //                        .on(
-                    //                            (AgentState S) ->
-                    //                                ItemSelector.hallucinationPotion.apply(
-                    //
-                    //
-                    // Arrays.asList(S.worldmodel.player.current.inventory.items), S))
-                    //                                            .lift(),
-                    //                                        NavTactic.interactWorldEntity(
-                    //
-                    // EntitySelector.hallucinationPotion,
-                    //                                            List.of(new
-                    // Command(CommandEnum.COMMAND_PICKUP))),
-                    //                                        NavTactic.interactWorldEntity(
-                    //                                            EntitySelector.money, List.of(new
-                    //                     Command(CommandEnum.COMMAND_PICKUP))),
+//                    Actions.quaffItem()
+//                        .on(
+//                            (AgentState S) ->
+//                                ItemSelector.hallucinationPotion.apply(Arrays.asList(S.worldmodel.player.current.inventory.items), S))
+//                                                                .lift(),
+//                    NavTactic.interactWorldEntity(
+//                        EntitySelector.hallucinationPotion, List.of(new Command(CommandEnum.COMMAND_PICKUP))),
 
-                    NavTactic.interactWorldEntity(
-                        EntitySelector.strangulationAmulet,
-                        List.of(new Command(CommandEnum.COMMAND_PICKUP))),
+//                    NavTactic.interactWorldEntity(
+//                        EntitySelector.money, List.of(new Command(CommandEnum.COMMAND_PICKUP))),
+
+//                    NavTactic.interactWorldEntity(
+//                        EntitySelector.strangulationAmulet,
+//                        List.of(new Command(CommandEnum.COMMAND_PICKUP))),
 
                     // Navigation
                     NavTactic.explore(),
